pagnavigation loads now two pages at once; word-wrap fix for firefox

--- a/include/css/projectDetails.css
+++ b/include/css/projectDetails.css
@@ -92,6 +92,7 @@ div.detailsPublishTime {
 
 div.detailsProjectTitle {
 	text-align: center;
+	word-wrap: break-word;
 }
 
 div.detailsProjectDescription {
