--- a/include/css/projectList.css
+++ b/include/css/projectList.css
@@ -91,6 +91,9 @@ div.projectDetailLine {
   word-wrap: break-word;
   margin:0.2em;
 }
+div.projectDetailLineMaxWidth { /*firefox needs this*/
+  max-width:606px;
+}
 div.projectListThumbnail {
   display: -webkit-box;
   -webkit-box-orient: vertical;
